--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,32 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>admin</title>
+    <title>Admin</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif; 
+            background-color: #f8f9fa; 
+            color: #333;
+        }
+        .container {
+            max-width: 400px;
+            margin: 100px auto; 
+            padding: 20px;
+            border-radius: 10px; 
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+            background-color: #fff; 
+            text-align: center; 
+        }
+        h1 {
+            color: #007bff;
+            margin-bottom: 30px;
+        }
+        label {
+            font-weight: bold;
+            margin-right: 10px;
+        }
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+            width: 100%; 
+            padding: 10px; 
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button[type="submit"] {
+            width: 100%; 
+            padding: 10px; 
+            background-color: #007bff;
+            color: #fff; 
+            border: none;
+            border-radius: 5px; 
+            cursor: pointer; 
+        }
+        button[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 
 <body>
-    <div>
-        <h1>welcome, please login</h1>
+    <div class="container">
+        <h1>Signin Page</h1>
         <form method="post">
             {% csrf_token %}
             <p>
-                <label>Username :</label>
-                <input type="text" name="username">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
             </p>
             <p>
-                <label>Email :</label>
-                <input type="email" name="email">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
             </p>
             <p>
-                <label>Password :</label>
-                <input type="password" name="password">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
             </p>
             <p>
-                <label>Confirm password :</label>
-                <input type="password" name="conpassword">
+                <label for="conpassword">Confirm Password</label>
+                <input type="password" id="conpassword" name="conpassword" required>
             </p>
-            <button type="submit">sign in</button>
+            <button type="submit">Sign In</button>
         </form>
     </div>
 </body>
+
 </html>
