--- a/templates/login.html
+++ b/templates/login.html
@@ -3,22 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa; 
+            color: #333; 
+        }
+        .container {
+            max-width: 400px; 
+            margin: 100px auto; 
+            padding: 20px;
+            border-radius: 10px; 
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+            background-color: #fff; 
+            text-align: center; 
+        }
+        h1 {
+            color: #007bff;
+            margin-bottom: 30px; 
+        }
+        label {
+            font-weight: bold; 
+            margin-right: 10px; 
+        }
+        input[type="text"],
+        input[type="password"] {
+            width: 100%; 
+            padding: 10px; 
+            margin-bottom: 20px; 
+            border: 1px solid #ccc; 
+            border-radius: 5px; 
+        }
+        button[type="submit"] {
+            width: 100%; 
+            padding: 10px; 
+            background-color: #007bff; 
+            color: #fff; 
+            border: none; 
+            border-radius: 5px; 
+            cursor: pointer; 
+        }
+        button[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <h1>Login page</h1>
-        <form method="post">
+    <div class="container">
+        <h1>Login Page</h1>
+        <form action='{% url 'login' %}' method="post">
             {% csrf_token %}
             <p>
-                <label>Username :</label>
-                <input type="text" name="user_name">
+                <label for="user_name">Username</label>
+                <input type="text" name="user_name" required>
             </p>
             <p>
-                <label>Password :</label>
-                <input type="password" name="pass_word">
+                <label for="pass_word">Password</label>
+                <input type="password" name="pass_word" required>
             </p>
-            <button type="submit">login in</button>
+            <button type="submit">Login</button>
         </form>
     </div>
 </body>
